# emacs-tramp-rpc

./: .elpaignore  .gitignore  AGENTS.md  Cargo.toml  README.org  benchmark-magit.el  benchmark.el  default.nix  flake.nix  plan.md  test-file-write.el  test-resize.el
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  release.yml
.pi/chains/: tramp-rpc-remediation.chain.json
benchmark/: benchmark-magit-detailed.el  benchmark.el
doc/: REMEDIATION_WORKFLOW.md  TECHNICAL_COMPARISON.org
lisp/: Makefile  tramp-rpc-advice.el  tramp-rpc-autoloads.el  tramp-rpc-deploy.el  tramp-rpc-magit.el  tramp-rpc-process.el  tramp-rpc-protocol.el  tramp-rpc.el
scripts/: build-all.sh
server/: Cargo.toml  tramp-rpc-server.py
server/src/: main.rs  protocol.rs  watcher.rs
server/src/handlers/: commands.rs  dir.rs  file.rs  io.rs  magit.rs  mod.rs  process.rs
test/: nongnu-elpa-check.sh  run-autoload-tests.sh  run-tests.sh  run-tramp-tests.el  tramp-rpc-autoload-tests.el  tramp-rpc-mock-tests.el  tramp-rpc-request-tests.el  tramp-rpc-tests.el
