[workspace]
resolver = "2"
members = ["server"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Arthur Heymans <arthur@aheymans.xyz>"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
thiserror = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std", "fs", "process", "sync", "time", "net"] }
futures = "0.3"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary
strip = true        # Strip symbols
